# ZenithBot

./: .gitignore  README.md  Zenith3.sln  ZenithBot.bat  ZenithBot.sln  release-notes.md
Zenith3/: App.config  Zenith.cs  Zenith.token  Zenith3.csproj  packages.config
Zenith3/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx
ZenithBot/: Program.cs  ZenithBot.csproj
zenith/: Cargo.toml
zenith/src/: main.rs
