[package]
name = "zenith"
version = "4.0.4"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tracing = "0.1.37"
rand = "0.8.5"
substring = "1.4.5"
chrono = "0.4.23"